# SimpleApiServer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.txt
include/api/rest/: ApiServer.hpp
src/: config.h.in  get_version.cpp
src/api/rest/: ApiServer.cpp
src/examples/: server_demo.cpp
tests/: CMakeLists.txt  all_tests.cpp  test_apiserver.cpp  test_request_response.cpp
